# plan_parser

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-test  README.md  main.py  pyproject.toml  run.sh  run_test.sh
plan_parser/: app.py  utls.py
plan_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
plan_parser/file_handlers/: csv_handler.py  main.py  plan_handler.py  utls.py
plan_parser/static/: base_styles.css  enable_disable.js
plan_parser/static/file_outputs/: output.csv
plan_parser/templates/: base.html
plan_parser/templates/base_page/: information.html  landing_page.html
plan_parser/templates/plan_parsing/: download.html  downloadError.html  instruction.html  plan_parsing.html  process.html  upload.html  uploadError.html
tests/: test_csv_handler.py  test_plan_handler.py  test_plan_parser.py  test_utls.py
tests/test_data/: test.csv  test_plan.csv  test_slcsp.csv  test_zips.csv
