[tool.poetry]
name = "plan_parser"
version = "0.1.0"
description = ""
authors = ["Anthony <azelinsky1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

